General codding improvments 1. Better Map access using Map.Entry 2. replcae new Integer with Integer.valuteOf()